Added .scss filses and updated index.html in src folder.

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Big Poppa Code Starter Kit</title>
+  <title>Mandela Effect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
+  <meta property='og:title' content='Mandela Effect'/>
+  <meta property='og:image' content='/img/logo.png'/>
+  <meta property='og:description' content='Lets people express their creativity in a visual format.'/>
 </head>
 
 <body>
